@@ -1,4 +1,6 @@
 -------------------------------------------------
+Gearswap 0.604 - Added more handling to deal with monstrosity. Dramatical reduced memory requirements.
+-------------------------------------------------
 Gearswap 0.603 - Added handling to deal with monstrosity. About a week worth of misc. changes that I can't remember.
 -------------------------------------------------
 Gearswap 0.602 - Minor refactoring, moved things around, added a little more protection to send_command()
